--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -15,10 +15,40 @@ h1, h2 {
     font-family: Oswald, sans-serif;
     text-transform: uppercase;
     letter-spacing: 4px;
-    color: #252525
+    color: #252525;
 }
 
-#logo{
+#logo {
     float: left;
     font-size: 280%;
+}
+
+/* navigation and links */
+#menu {
+    font-size: 110%;
+    letter-spacing: 4px;
+}
+
+#menu, logo{
+    line-height: 75px;
+
+}
+
+#menu li{
+    float: right;
+    list-style-type: none;
+    margin-right: 30px;
+}
+
+#menu a {
+    text-decoration: none;
+    color: inherit;
+}
+
+#menu a:hover {
+    border-bottom: 1px solid;
+}
+
+.active {
+    border-bottom: 1 px solid #3a3a3a;
 }
