Style social links

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -208,3 +208,17 @@ hr {
 #times h2{
     color: #fafafa
 }
+
+footer{
+    height: 150px;
+
+}
+
+.social-networks > li {
+    text-align: center;
+    display: inline;
+}
+
+.social-networks i {
+    
+}
