--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -316,4 +316,16 @@ footer{
         text-align: center;
         padding: 0 20px;
     }
+
+    #photos {
+        column-count: 3;
+    }
+}
+
+/* For mobile screeen sizes from 800px wide and down */
+
+@media screen and (max-width: 800px) {
+    #photos {
+        column-count: 2;
+    }
 }
